# coveflow

./: .dockerignore  .gitignore  LICENSE  NOTICE  README.md  docker-compose.yml
.github/workflows/: ci.yml  sandbox-test.yml
coveflow/: Cargo.toml  README.md
coveflow/crates/api/: Cargo.toml
coveflow/crates/api/src/: api_tokens.rs  auth.rs  cluster.rs  common.rs  error.rs  flows.rs  health.rs  lib.rs  members.rs  runs.rs  schedules.rs  script_schema.rs  scripts.rs  secrets.rs  services.rs  teams.rs  test_helpers.rs  triggers.rs  users.rs  webhooks.rs  workspaces.rs
coveflow/crates/flow-expr/: Cargo.toml
coveflow/crates/flow-expr/src/: eval.rs  lexer.rs  lib.rs  parser.rs
coveflow/crates/queue/: Cargo.toml
coveflow/crates/queue/src/: cancel.rs  claim.rs  finish.rs  flow.rs  lib.rs  log.rs  mark.rs  reap.rs  rerun.rs  retention.rs  run_context.rs  schedule.rs  submit.rs  trigger.rs
coveflow/crates/queue/tests/: integration.rs
coveflow/crates/types/: Cargo.toml
coveflow/crates/types/src/: api_token.rs  crypto.rs  flow_status.rs  flows.rs  lib.rs  permissions.rs  run.rs  run_context.rs  schedule.rs  scripts.rs  trigger.rs
coveflow/crates/worker/: Cargo.toml
coveflow/crates/worker/src/: common.rs  config.rs  db_log.rs  error.rs  lib.rs  maintenance.rs  metrics.rs  occupancy.rs  ping.rs  python.rs  resource_detect.rs  resource_manager.rs  secrets.rs  worker.rs
coveflow/crates/worker/src/sandbox/: mod.rs  none.rs  nsjail.rs  signals.rs
coveflow/migrations/: 00000000000001_init.down.sql  00000000000001_init.up.sql  00000000000002_add_timestamps.down.sql  00000000000002_add_timestamps.up.sql  00000000000003_chunk_logs.down.sql  00000000000003_chunk_logs.up.sql  00000000000004_maintenance_and_retention.down.sql  00000000000004_maintenance_and_retention.up.sql  00000000000005_script_runtime.down.sql  00000000000005_script_runtime.up.sql  00000000000006_remove_bash.down.sql  00000000000006_remove_bash.up.sql  00000000000007_run_queue_worker_index.down.sql  00000000000007_run_queue_worker_index.up.sql  00000000000008_drop_run_queue_last_ping.down.sql  00000000000008_drop_run_queue_last_ping.up.sql  00000000000009_script_name.down.sql  00000000000009_script_name.up.sql  00000000000010_backfill_script_name.down.sql  00000000000010_backfill_script_name.up.sql  00000000000011_drop_script_name_default.down.sql  00000000000011_drop_script_name_default.up.sql  00000000000012_script_id.down.sql  00000000000012_script_id.up.sql  00000000000013_grandfather_trigger_rule.down.sql  00000000000013_grandfather_trigger_rule.up.sql  00000000000014_team_member_role.down.sql  00000000000014_team_member_role.up.sql  00000000000015_paths_into_roots.down.sql  00000000000015_paths_into_roots.up.sql  00000000000016_schedule.down.sql  00000000000016_schedule.up.sql  00000000000017_run_scheduled_time.down.sql  00000000000017_run_scheduled_time.up.sql  00000000000018_flow_id.down.sql  00000000000018_flow_id.up.sql  00000000000019_run_data_interval_end.down.sql  00000000000019_run_data_interval_end.up.sql  00000000000020_worker_display_name.down.sql  00000000000020_worker_display_name.up.sql  (+5 more)
coveflow/src/: main.rs
frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: constants.ts  toast.ts  types.ts
frontend/src/lib/auth/: admin-routes.ts
frontend/src/lib/components/: LoginForm.svelte  ScriptCreateForm.svelte  ScriptTable.svelte  SignupForm.svelte
frontend/src/lib/components/admin/: AddMemberModal.svelte  AddTeamMemberModal.svelte  ClusterSummaryBar.svelte  ConfirmModal.svelte  CreateTeamModal.svelte  UserSearchInput.svelte
frontend/src/lib/components/auth/: AuthCard.svelte
frontend/src/lib/components/common/: Alert.svelte  Badge.svelte  Button.svelte  Card.svelte  Checkbox.svelte  ConfirmDialog.svelte  CoveFlowLogo.svelte  DataTable.svelte  FileTree.svelte  IconButton.svelte  MetaField.svelte  Modal.svelte  PageFrame.svelte  PageHeader.svelte  PasswordInput.svelte  ResizableSplitPane.svelte  ResourceBar.svelte  SecretInput.svelte  Select.svelte  Tabs.svelte  TextArea.svelte  TextInput.svelte  TimeRangePicker.svelte  TimezonePicker.svelte  WorkerStatusBadge.svelte
frontend/src/lib/components/flows/: AddNodePicker.svelte  ConditionBuilder.svelte  FlowStepNode.svelte  InputBindings.svelte  RetryPolicyEditor.svelte
frontend/src/lib/components/layout/: AppShell.svelte  AppSidebar.svelte  WorkspaceSwitcher.svelte
frontend/src/lib/components/runs/: CancelRunModal.svelte  FlowRunGraph.svelte  FlowStatusPanel.svelte  LogViewer.svelte  MarkRunModal.svelte  RerunModal.svelte  RunCodePanel.svelte  RunContextPanel.svelte  RunFilters.svelte  RunMetadataPanel.svelte  RunOptionsPopover.svelte  RunResultPanel.svelte  RunStatusBadge.svelte  RunTable.svelte  ServiceLogViewer.svelte
frontend/src/lib/components/schedules/: ScheduleFormModal.svelte
frontend/src/lib/components/scripts/: RestoreConfirmModal.svelte  ScriptDraftNotice.svelte  ScriptEditContent.svelte  ScriptEditShell.svelte  ScriptEditor.svelte  ScriptHistory.svelte  VersionDiffModal.svelte
frontend/src/lib/services/: api.ts  flow-graph.ts  permissions.ts  polling.ts  script-drafts.ts  sse.ts  url.ts  workspace-loader.svelte.ts
frontend/src/lib/stores/: auth.svelte.ts  confirm.svelte.ts  timezone.svelte.ts  workspace.svelte.ts
frontend/src/lib/utils/: format-duration.ts  format-time.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/(authenticated)/: +layout.svelte
frontend/src/routes/user/: +layout.svelte
infra/: prometheus.yml  tempo.yaml
infra/grafana/provisioning/dashboards/: coveflow-overview.json  coveflow-worker.json  dashboards.yml
infra/grafana/provisioning/datasources/: datasources.yml
(+39 files in other folders)
