[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/types",
    "crates/queue",
    "crates/worker",
    "crates/flow-expr",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["wudihero2"]

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
needless_collect = "warn"
large_enum_variant = "warn"
module_name_repetitions = "allow"

[workspace.dependencies]
tokio = { version = "1.51.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1.89"
thiserror = "2"
tracing = "0.1"
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
croner = "2"
tokio-util = { version = "0.7", features = ["rt"] }
nix = { version = "0.31.2", features = ["signal", "process"] }
process-wrap = { version = "8.2.1", features = ["tokio1"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
argon2 = "0.5"
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
prometheus-client = "0.24"

[package]
name = "coveflow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "coveflow-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { workspace = true }
coveflow-api = { path = "crates/api" }
coveflow-worker = { path = "crates/worker" }
coveflow-queue = { path = "crates/queue" }
coveflow-types = { path = "crates/types" }
chrono = { workspace = true }
dotenvy = "0.15"
sqlx = { workspace = true, features = ["migrate"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
prometheus-client = { workspace = true }
opentelemetry = { version = "0.29", features = ["trace"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.30"
tracing-loki = "0.2"
url = "2"
hostname = "0.4"

[profile.dev]
opt-level = 0
incremental = true
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

[profile.release]
codegen-units = 1
lto = "thin"
debug = "line-tables-only"
strip = "none"
