[package]
name = "coveflow-worker"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
chrono = { workspace = true }
nix = { workspace = true }
sqlx = { workspace = true }
tokio-util = { workspace = true }
process-wrap = { workspace = true }
coveflow-types = { path = "../types" }
coveflow-queue = { path = "../queue" }
prometheus-client = { workspace = true }
sysinfo = "0.35"

[dev-dependencies]
tempfile = "3"
sqlx = { workspace = true, features = ["macros", "uuid", "json", "chrono", "migrate"] }
base64 = { workspace = true }

[lints]
workspace = true
